--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ env:
   RESOURCE_GROUP_NAME: store
 
   # specify your preferred region
-  REGION: eastus
+  REGION: westeurope
 
   STORE_DOCKER: Store/Dockerfile
   STORE_IMAGE: store
@@ -51,7 +51,7 @@ jobs:
         inlineScript: >
           echo "Creating resources"
 
-          az deployment group create --resource-group ${{ env.RESOURCE_GROUP_NAME }} --template-file '/github/workspace/Azure/main.bicep' --debug
+          az deployment group create --resource-group ${{ env.RESOURCE_GROUP_NAME }} --template-file '/Azure/main.bicep' --debug
 
   build:
     runs-on: ubuntu-latest
